CHANGES
=======

0.16.2 (05-27-2015)
-------------------

- Update python version required for `__del__` usage: it's actially
   3.4.1 instead of 3.4.0


0.16.1 (05-27-2015)
-------------------

- Fix regression in static file handling #377

0.16.0 (05-26-2015)
-------------------

- Unset waiter future after cancellation #363

- Update request url with query parameters #372

- Support new `fingerprint` param of TCPConnector to enable verifying
  ssl certificates via md5, sha1, or sha256 digest #366

- Setup uploaded filename if field value is binary and transfer
  encoding is not specified #349

- Implement `ClientSession.close()` method

- Implement `connector.closed` readonly property

- Implement `ClientSession.closed` readonly property

- Implement `ClientSession.connector` readonly property

- Implement `ClientSession.detach` method

- Add `__del__` to client-side objects: sessions, connectors,
  connections, requests, responses.

- Refactor connections cleanup by connector #357

- Add `limit` parameter to connector constructor #358

- Add `request.has_body` property #364

- Add `response_class` parameter to `ws_connect()` #367

- `ProxyConnector` doesn't support keep-alive requests by default
  starting from now #368

- Add `connector.force_close` property

- Add ws_connect to ClientSession #374

- Support optional `chunk_size` parameter in `router.add_static()`


0.15.3 (04-22-2015)
-------------------

- Fix graceful shutdown handling

- Fix `Expect` header handling for not found and not allowed routes #340


0.15.2 (04-19-2015)
-------------------

- Flow control subsystem refactoring

- Http server performace optimizations

- Allow to match any request method with `*`

- Explicitly call drain on transport #316

- Make chardet module dependency mandatory #318

- Support keep-alive for HTTP 1.0 #325

- Do not chunk single file during upload #327

- Add ClientSession object for cookie storage and default headers #328
